--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==1.0
 oauth2client==4.0.0
 packaging==16.8
 paho-mqtt==1.3.0
+psycopg2==2.7.3.2
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
 PyDbLite==3.0.4
