--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
 appdirs==1.4.3
 click==6.7
 Flask==0.12.1
-google-api-python-client==1.6.2
+google-api-python-client
 httplib2==0.10.3
 itsdangerous==0.24
 Jinja2==2.9.6
-MarkupSafe==1.0
-oauth2client==4.0.0
+MarkupSafe==2.1.2
+oauth2client
 packaging==16.8
 paho-mqtt==1.3.0
-psycopg2==2.7.3.2
-pyasn1==0.2.3
-pyasn1-modules==0.0.8
+pyasn1
+pyasn1-modules
 PyDbLite==3.0.4
 pyparsing==2.2.0
-requests==2.13.0
+requests
 rsa==3.4.2
-six==1.10.0
-uritemplate==3.0.0
-Werkzeug==0.12.1
-python-dateutil==2.5.3
-pyrebase==3.0.27
+six
+uritemplate
+Werkzeug
+python-dateutil
+pyrebase
